--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
+	<link href="https://fonts.googleapis.com/css?family=Abel|Source+Code+Pro" rel="stylesheet">	
 
 	<!-- JS -->
 	<script src="libs/angular/angular.min.js"></script>
-	<script src="libs/angular-route/angular-route.min.js"></script>
+	<script src="libs/angular-route/angular-route.min.js"></script> 
 
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/controllers/MainCtrl.js"></script>
@@ -22,7 +23,9 @@
 	<script src="js/services/GeekService.js"></script>
 	<script src="js/appRoutes.js"></script>
 	<script src="js/app.js"></script>
-</head>
+
+
+</head>  
 <body ng-app="sampleApp" ng-controller="NerdController">
 <div class="container">
 	
