google maps API angular directive integration

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,18 @@
 	<link href="https://fonts.googleapis.com/css?family=Abel|Source+Code+Pro" rel="stylesheet">	
 
 	<!-- JS -->
+	
 	<script src="libs/angular/angular.min.js"></script>
 	<script src="libs/angular-route/angular-route.min.js"></script> 
+	
+	<script src="libs/misc/lodash.min.js"></script>
+	<!--<script src="libs/angular/angular-simple-logger.min.js"></script>
+	
+	<script src="libs/angular/angular-googlymoops.js"></script>-->
+
+<script src="http://cdn.rawgit.com/nmccready/angular-simple-logger/0.1.7/dist/angular-simple-logger.js"></script>
+
+<script src="http://rawgit.com/angular-ui/angular-google-maps/master/dist/angular-google-maps.min.js"></script>
 
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/controllers/MainCtrl.js"></script>
