--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
 	
 	<script src="libs/angular/angular-googlymoops.js"></script>-->
 
-<script src="http://cdn.rawgit.com/nmccready/angular-simple-logger/0.1.7/dist/angular-simple-logger.js"></script>
+<script src="https://cdn.rawgit.com/nmccready/angular-simple-logger/0.1.7/dist/angular-simple-logger.js"></script>
 
-<script src="http://rawgit.com/angular-ui/angular-google-maps/master/dist/angular-google-maps.min.js"></script>
+<script src="https://rawgit.com/angular-ui/angular-google-maps/master/dist/angular-google-maps.min.js"></script>
 
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/controllers/MainCtrl.js"></script>
