--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 
 </head>  
 <body ng-app="sampleApp" ng-controller="NerdController">
-<div class="container">
+<div class="Customcontainer">
 	
 <!-- ANGULAR DYNAMIC CONTENT -->
 <div ng-view></div>
