added initial styling to header

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 	<!--<script src="libs/angular/angular-simple-logger.min.js"></script>
 	
 	<script src="libs/angular/angular-googlymoops.js"></script>-->
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdn.rawgit.com/nmccready/angular-simple-logger/0.1.7/dist/angular-simple-logger.js"></script>
 
 <script src="https://rawgit.com/angular-ui/angular-google-maps/master/dist/angular-google-maps.min.js"></script>
