--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,19 @@
 	<script src="js/services/GeekService.js"></script>
 	<script src="js/appRoutes.js"></script>
 	<script src="js/app.js"></script>
+	<!-- Google analytics code -->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-85584083-1', 'auto');
+	  //ga('send', 'pageview');
+	</script>
+	<script src="libs/angulartics/dist/angulartics.min.js"></script>
+	<script src="libs/angulartics-google-analytics/dist/angulartics-ga.min.js"></script>
+
 
 
 </head>  
