added facebook descriptions

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta desciprtion="worlds worst city guide">
+    <meta property="og:image" content="/assets/hero_image_stiched.png">
+        <meta property="og:description" content="worlds worst city guide">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<base href="/">
 
